# email-triage-env

./: Dockerfile  README.md  email_triage_env.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  server.py
server/: app.py
