[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "email-triage-env"
version = "1.0.0"
description = "An OpenEnv environment for email triage"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "openenv-core",
]

[project.scripts]
server = "server.app:main"

[tool.openenv]
name = "email-triage-env"
version = "1.0.0"